--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.4",
+    "@rehype-pretty/transformers": "^0.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "gray-matter": "^4.0.3",
@@ -22,9 +23,11 @@
     "react-dom": "19.2.0",
     "rehype-document": "^7.0.3",
     "rehype-format": "^5.0.1",
+    "rehype-pretty-code": "^0.14.1",
     "rehype-stringify": "^10.0.1",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.2",
+    "shiki": "^3.19.0",
     "tailwind-merge": "^3.4.0",
     "unified": "^11.0.5"
   },
