--- a/package.json
+++ b/package.json
@@ -16,19 +16,23 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "gray-matter": "^4.0.3",
+    "html-react-parser": "^5.2.10",
     "lucide-react": "^0.555.0",
     "next": "16.0.6",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-top-loading-bar": "^3.0.2",
     "rehype-document": "^7.0.3",
     "rehype-format": "^5.0.1",
     "rehype-pretty-code": "^0.14.1",
+    "rehype-slug": "^6.0.0",
     "rehype-stringify": "^10.0.1",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.2",
     "shiki": "^3.19.0",
     "tailwind-merge": "^3.4.0",
+    "typed.js": "^2.1.0",
     "unified": "^11.0.5"
   },
   "devDependencies": {
