--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.4",
     "@rehype-pretty/transformers": "^0.13.2",
+    "@supabase/supabase-js": "^2.86.0",
+    "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "gray-matter": "^4.0.3",
     "html-react-parser": "^5.2.10",
     "lucide-react": "^0.555.0",
     "next": "16.0.6",
+    "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
