--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "easymde": "^2.20.0",
     "gray-matter": "^4.0.3",
     "html-react-parser": "^5.2.10",
     "lucide-react": "^0.555.0",
+    "marked": "^17.0.1",
     "next": "16.0.6",
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-simplemde-editor": "^5.2.0",
     "react-top-loading-bar": "^3.0.2",
     "rehype-document": "^7.0.3",
     "rehype-format": "^5.0.1",
